kube-config/auth-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.image-pull-policy: Never
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: auth-server
  name: auth-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.image-pull-policy: Never
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: auth-server
    spec:
      containers:
        - env:
            - name: DATABASE_HOST
              value: mysql-db
            - name: DATABASE_NAME
              value: scholarx
            - name: DATABASE_PASSWORD
              value: password
            - name: DATABASE_PORT
              value: "3306"
            - name: DATABASE_USER
              value: user
          image: auth-server
          imagePullPolicy: Never
          name: auth-server
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
