kube-config/scholarx-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.image-pull-policy: Never
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: scholarx-app
  name: scholarx-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: scholarx-app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.image-pull-policy: Never
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: scholarx-app
    spec:
      containers:
        - env:
            - name: DATABASE_HOST
              value: mysql-db
            - name: DATABASE_NAME
              value: scholarx
            - name: DATABASE_PASSWORD
              value: password
            - name: DATABASE_PORT
              value: "3306"
            - name: DATABASE_USER
              value: user
          image: scholarx
          imagePullPolicy: Never
          name: scholarx-app
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
